--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <hr>
 <h1>Angular "courses component"</h1>
-<courses></courses>
-<app-course></app-course>
+<app-boostrap-panel></app-boostrap-panel>
 <hr>
