input/output properties and passing event data

--- a/src/app/boostrap-panel/boostrap-panel.component.html
+++ b/src/app/boostrap-panel/boostrap-panel.component.html
@@ -1,5 +1,5 @@
-<div class="panel panel-default">
-    <div class="panel-heading">Heading</div>
-    <div class="panel-body">Body</div>
+<div class="panel panel-dark">
+    <div class="panel-heading">{{passedHeadingValue}}</div>
+    <div class="panel-body">{{passedBodyValue}}</div>
+    <button class="btn btn-warning" (click)="onClick()">Click Emitter</button>
 </div>
-<button classs="btn btn-danger">ssss</button>
