--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <hr>
-<h1>Angular "courses component"</h1>
-<app-boostrap-panel></app-boostrap-panel>
+<h1 class="bg-danger">Angular APP</h1>
+<app-boostrap-panel [InputHeadingProp]="heading" [InputBodyProp]="body" (outputValue)="onTitleChange($event)"></app-boostrap-panel>
 <hr>
