--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,14 @@
     <div *ngSwitchCase="'tab1'">Tab1 content</div>
     <div *ngSwitchCase="'tab2'">Tab2 content</div>
 </div>
+<ul>
+    <li *ngFor="let course of courses">
+        {{course.name}}
+        <button (click)="onRemove(course)">Remove</button>
+    </li>
+</ul>
+<button (click)="onAdd()">Remove</button>
+
 <h1 class="bg-danger">Angular APP</h1>
 <!-- class heading and body uses as selectors in the child panel so you don't need a selector if you have only one ng-content -->
 <app-boostrap-panel (outputValue)="onTitleChange($event)">
