--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,12 @@
     <div *ngSwitchCase="'tab1'">Tab1 content</div>
     <div *ngSwitchCase="'tab2'">Tab2 content</div>
 </div>
+<button (click)="loadCourses()">load courses</button>
 <ul>
-    <li *ngFor="let course of courses">
+    <li *ngFor="let course of courses; trackBy : onTrack">
         {{course.name}}
-        <button (click)="onRemove(course)">Remove</button>
     </li>
 </ul>
-<button (click)="onAdd()">Remove</button>
 
 <h1 class="bg-danger">Angular APP</h1>
 <!-- class heading and body uses as selectors in the child panel so you don't need a selector if you have only one ng-content -->
