simple example about Template-driven approch that with NgModel that have a control property that repersent the FormControl Instance

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <hr>
-<ul class="nav nav-pills">
+<!-- <ul class="nav nav-pills">
     <li class="active"><a (click)="currentTab='tab1'">Tab1</a></li>
     <li><a (click)="currentTab='tab2'">Tab2</a></li>
 </ul>
@@ -12,6 +12,10 @@
     <li *ngFor="let course of courses; trackBy : onTrack">
         {{course.name}}
     </li>
-</ul>
+</ul> -->
 <!-- <input appInputFormat [Format]="'lowercase'"> multiple param syntax -->
 <input [appInputFormat]="'uppercase'"><!--  one param syntax -->
+
+<app-form-template-driven>
+    
+</app-form-template-driven>
