disable submit button if the form control elements not valid

--- a/src/app/form-template-driven/form-template-driven.component.html
+++ b/src/app/form-template-driven/form-template-driven.component.html
@@ -58,5 +58,5 @@
                 <div *ngIf="lastName.errors['minlength']">lastName should be minimum 3 characters</div>
             </div>
       </div>
-      <button type="submit">Submit</button>
+      <button type="submit" [disabled]="!f.valid">Submit</button>
 </form>
