--- a/src/app/form-template-driven/form-template-driven.component.html
+++ b/src/app/form-template-driven/form-template-driven.component.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-      <div class="mb-3">
+    <div class="mb-3">
         <label for="" class="form-label">Last Name</label>
         <input type="text"
           class="form-control" 
@@ -57,6 +57,16 @@
                 <div *ngIf="lastName.errors['pattern']">lastName does not match the pattern</div>
                 <div *ngIf="lastName.errors['minlength']">lastName should be minimum 3 characters</div>
             </div>
-      </div>
-      <button type="submit" [disabled]="!f.valid">Submit</button>
+    </div>
+    
+    <div class="checkbox">
+        <label>
+            <input type="checkbox" ngModel name="subscribe"> Subscribe to mailing list
+        </label>
+    </div>
+    <p>
+        {{f.value | json}}
+    </p>
+    
+    <button type="submit" [disabled]="!f.valid">Submit</button>
 </form>
