--- a/src/app/form-template-driven/form-template-driven.component.html
+++ b/src/app/form-template-driven/form-template-driven.component.html
@@ -78,6 +78,12 @@
             <option *ngFor="let method of contactMethods" [ngValue]="method">{{method.name}}</option>
         </select>
     </div> -->
+    <div *ngFor="let method of contactMethods" class="radio">
+        <label for="">
+            <input ngModel type="radio" name="contactMethod" [value]="method.id">
+            {{method.name}}
+        </label>
+    </div>
     <p>
         {{f.value | json}}
     </p>
